Fix various errors, warnings, and deprecated newInstance (from jdk9+) calls