@@ -5,6 +5,7 @@ import uk.ac.warwick.dcs.sherlock.api.common.ISourceFile;
 import uk.ac.warwick.dcs.sherlock.api.common.ISourceFileHelper;
 
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 
 public class SherlockHelper {
 
@@ -16,8 +17,8 @@ public class SherlockHelper {
 		return field.getDeclaringClass().getName() + ":" + field.getName();
 	}
 
-	public static ICodeBlockGroup getInstanceOfCodeBlockGroup() throws IllegalAccessException, InstantiationException {
-		return codeBlockGroupClass.newInstance();
+	public static ICodeBlockGroup getInstanceOfCodeBlockGroup() throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
+		return codeBlockGroupClass.getConstructor().newInstance();
 	}
 
 	public static ISourceFile getSourceFile(long persistentId) {
